--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         <div class="contacts-form__forMap">
             <div class="contacts-form">
                 <div class="forms">
-                    <form action="#" method="post">
+                    <form action="/" method="get">
                         <div>
                             <input type="text" name="name" placeholder="Name">
                             <input type="email" name="email" placeholder="E-mail Address">
