--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
         <div class="contacts-form__forMap">
             <div class="contacts-form">
                 <div class="forms">
-                    <form action="#"> <!-- -->For post form action="url", method="post" or "get"<!-- --> 
+                    <!--For post form action="url", method="post" or "get"--> 
+                    <form action="#">
                         <div>
                             <input type="text" name="name" placeholder="Name">
                             <input type="email" name="email" placeholder="E-mail Address">
