--- a/index.html
+++ b/index.html
@@ -430,8 +430,7 @@
         <div class="contacts-form__forMap">
             <div class="contacts-form">
                 <div class="forms">
-                    <!--For post form action="url", method="post" or "get"--> 
-                    <form action="#">
+                    <form action="#" method="post">
                         <div>
                             <input type="text" name="name" placeholder="Name">
                             <input type="email" name="email" placeholder="E-mail Address">
@@ -471,23 +470,23 @@
         </div>
     </div>
 </footer>
-<script src="js/hamburger.js"></script>
-<script src="js/dropdown.js"></script>
-<script src="js/carouselInterval.js"></script>
-<script src="js/skills.js"></script>
-<script src="js/activeNav.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<script type="text/javascript" src="./js/hamburger.js"></script>
+<script type="text/javascript" src="./js/dropdown.js"></script>
+<script type="text/javascript" src="./js/carouselInterval.js"></script>
+<script type="text/javascript" src="./js/skills.js"></script>
+<script type="text/javascript" src="./js/activeNav.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeeaLW31JI2BObyNXSYHMWU0feNCubP48&callback=initMap" async
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeeaLW31JI2BObyNXSYHMWU0feNCubP48&callback=initMap" async
         defer></script>
-<script src="js/googleBackground.js"></script>
+<script type="text/javascript" src="./js/googleBackground.js"></script>
 </body>
 </html>
 
