--- a/index.html
+++ b/index.html
@@ -470,12 +470,12 @@
         </div>
     </div>
 </footer>
-<script type="text/javascript" src="./js/hamburger.js"></script>
-<script type="text/javascript" src="./js/dropdown.js"></script>
-<script type="text/javascript" src="./js/carouselInterval.js"></script>
-<script type="text/javascript" src="./js/skills.js"></script>
-<script type="text/javascript" src="./js/activeNav.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<script rel="subresource" type="text/javascript" src="./js/hamburger.js"></script>
+<script rel="subresource" type="text/javascript" src="./js/dropdown.js"></script>
+<script rel="subresource" type="text/javascript" src="./js/carouselInterval.js"></script>
+<script rel="subresource" type="text/javascript" src="./js/skills.js"></script>
+<script rel="subresource" type="text/javascript" src="./js/activeNav.js"></script>
+<script rel="subresource" type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
